--- a/util/sample_init_scripts/genders/README
+++ b/util/sample_init_scripts/genders/README
@@ -1,20 +1,45 @@
-To test,  copy the etc/ layout here into your /etc or imageroot/etc/
-and then cd to imageroot (or / if no imageroot) and:
+To use ldmsd with libgenders-based configuration,
+copy the systemd/ or sysv/ files  here into your /etc or imageroot/etc/
+and modify them, or use the relocatable TOSS rpms to install directly
+with the localstatedir location used on your system.
 
-Clone/Edit /etc/genders.ldms.ataco to define the LDMS genders describing the
-node roles, data collection network usage, metrics collected, and so forth.
-If desired, ldms genders can be kept together with regular genders in /etc/genders.
-This will facilitate starting/stopping data collection with
+WITH RPM:
+Assuming your system uses something writable other than /var as localstatedir:
+	rpm -Uvh --relocate /var=something ovis-3.*.rpm
+Or if /var is writable by daemons, then just:
+	rpm -Uvh ovis-3.*.rpm
+
+WITH MANUAL copying:
+
+(assuming /var is localstatedir):
+
+For systemd on rhel (assuming ovis installed in /usr):
+cp -r /usr/share/doc/ovis-3.3.1/sample_init_scripts/genders/systemd/etc /
+cp /usr/share/doc/ovis-3.3.1/sample_init_scripts/genders/systemd/ldms*.service /usr/lib/systemd/system
+
+For sysvinit on rhel (assuming ovis installed in /usr):
+Note that sysconfig content under sysv is a symbolic link to systemd sysconfig and under some
+OS versions, /etc/init.d is itself a symbolic link to /etc/rc.d/init.d. So copy in chunks:
+
+cp -r /usr/share/doc/ovis-3.3.1/sample_init_scripts/genders/sysv/etc/init.d/ldms* /etc/init.d
+cp -r /usr/share/doc/ovis-3.3.1/sample_init_scripts/genders/sysv/etc/sysconfig/ldms.d /etc/sysconfig/
+
+Then for either systemd or sysvinit, modify 
+/etc/sysconfig/ldms.d/ClusterGenders/genders.local as needed.
+
+If desired, ldms attributes can be kept together with regular attributes in 
+/etc/genders.  This will facilitate starting/stopping data collection with
 	pdsh -g ldmsd service ldmsd start
+or
+	pdsh -g systemctl daemon-reload
+	pdsh -g systemctl start ldmsd
 
-Edit /etc/sysconfig/ldmsd.conf to specify the correct name of the 
-genders file for your cluster (same gender file content must be visible from
-all nodes) in the LDMS_GENDERS variable.
+Edit /etc/sysconfig/ldms.d/ldmsd.local.conf to specify the correct name of the 
+genders file for your system. Set LDMS_GENDERS=/pathname if you do not use an
+/etc/genders or /etc/sysconfig/ldms.d/ClusterGenders/genders.local.
 
-In /etc/sysconfig/ldms-aggd specify the correct directory location for
-STORE_PATH where data will be dumped.
+Edit /etc/sysconfig/ldms.d/ldmsd.local.conf to specify the correct value of
+LDMS_LOG_PATH if you want to log to a file rather than the syslog or journal.
 
-Edit /etc/sysconfig/ldmsd.conf to specify the correct log path
-LDMSD_LOG_PATH for your installation. 'syslog' will trigger use of syslog
-calls instead of log files. LDMSD_LOG_PATH is also where ldms-aggd will log.
-With debug genders other than ldms[agg]d_dbg=ERROR, the log can get a lot of traffic.
+See man page ldms-attributes for attribute details in the genders file.
+See man page ldmsd-genders for environment variables and daemon startup overview.
