--- a/ldms/man/Plugin_store_csv.man
+++ b/ldms/man/Plugin_store_csv.man
@@ -24,11 +24,11 @@ the ldmsd_controller or a configuration file. The store_csv plugin is a CSV stor
 .PP
 
 .SH STORE_CSV INIT CONFIGURATION ATTRIBUTE SYNTAX
-The configuration parameters altheader, rolltype, rollover, buffer, and sequence are applied to all metric sets alike.
+The configuration parameters altheader, rolltype, rollover, and buffer are applied to all metric sets alike.
 A subset of these can be overriden by the action=custom values.
 .TP
 .BR config
-name=<plugin_name> action=init path=<path> [ altheader=<0/!0> buffer=<0/!0> rolltype=<rolltype> rollover=<rollover> sequence=<seqname> userdata=<0/!0>]
+name=<plugin_name> action=init path=<path> [ altheader=<0/!0> buffer=<0/!0> rolltype=<rolltype> rollover=<rollover> userdata=<0/!0>]
 .br
 ldmsd_controller configuration line
 .RS
@@ -83,10 +83,6 @@ roll after approximately rollover bytes are written.
 rollover=<rollover>
 .br
 Rollover value controls the frequency of rollover (e.g., number of bytes, number of records, time interval, seconds after midnight). Note that these values are estimates.
-.TP
-sequence=<seqname>
-.br
-Controls the ordering of metric data column. This is kept as an option for historical reasons. See STORE COLUMN ORDERING for details.
 .RE
 
 .SH STORE_CSV CUSTOM CONFIGURATION ATTRIBUTE SYNTAX
@@ -95,7 +91,7 @@ unless overriden by the action=custom values. Only a subset can be overridden.
 
 .TP
 .BR config
-name=<plugin_name> action=<custom> container=<container> schema=<schema> [ altheader=<0/!0> sequence=<seqname> userdata=<0/!0>]
+name=<plugin_name> action=<custom> container=<container> schema=<schema> [ altheader=<0/!0> userdata=<0/!0>]
 .br
 ldmsd_controller configuration line
 .RS
@@ -121,10 +117,6 @@ schema=<schema>
 The container and the schema together uniquely distinguish the sets that the custom arguments will target
 .TP
 userdata=<0/!0>
-.br
-Overrides the default value set in action = main. Definition is as above.
-.TP
-sequence=<seqname>
 .br
 Overrides the default value set in action = main. Definition is as above.
 .RE
@@ -179,46 +171,29 @@ or if userdata has been opted not to include, just:
 .RE
 .PP
 .PP
-The default column sequence of <sampled metrics> is the order in which the metrics are added into the metric set by the sampler (or the order they are specifed by the user).
+The column sequence of <sampled metrics> is the order in which the metrics are added into the metric set by the sampler (or the order they are specifed by the user).
 .QP
 Note that the sampler's number and order of metric additions may vary with the kind and number of hardware features enabled on a host at runtime or with the version of kernel. Because of this potential for variation, down-stream tools consuming the CSV files should always determine column names or column number of a specific metric by parsing the header line or .HEADER file.
 .PP
-Valid sequence options are:
-.RS
-.TP
-forward
-.br
-List metrics in the order added in the sampler definition or, if metrics are specified by the user, that order.
-.TP
-reverse
-.br
-List metrics in the reverse of the order added in the sampler definition (the default for back-compatibility reasons).
-.TP
-alnum
-.br
-(reserved) Not implemented. Sort the columns by name and name-embedded numeric values.
-.RE
 
 .SH NOTES
 .PP
 .IP \[bu]
 Please note the argument changes from v2.
 .IP \[bu]
-Note that the default order is FORWARD. This is the inverse of v2.
-.IP \[bu]
-Note that sequence will be deprecated soon.
+The 'sequence' option has been removed.
 .PP
 
 .SH BUGS
-No known bugs. In LDMS version 3.x, alnum is not expected to be implemented.
+No known bugs.
 
 .SH EXAMPLES
 .PP
 Within ldmsd_controller or in a configuration file
 .nf
 load name=store_csv
-config name=store_csv action=init altheader=1 sequence=forward path=/XXX/storedir
-config name=store_csv action=custom container=loadavg_store schema=loadavg sequence=reverse
+config name=store_csv action=init altheader=1 path=/XXX/storedir
+config name=store_csv action=custom container=loadavg_store schema=loadavg
 strgp_add name=csv_mem_policy plugin=store_csv container=loadavg_store schema=loadavg
 .fi
 
