--- a/ldms/man/Plugin_store_csv.man
+++ b/ldms/man/Plugin_store_csv.man
@@ -24,11 +24,11 @@ the ldmsd_controller or a configuration file. The store_csv plugin is a CSV stor
 .PP
 
 .SH STORE_CSV INIT CONFIGURATION ATTRIBUTE SYNTAX
-The configuration parameters altheader, rolltype, rollover, and buffer are applied to all metric sets alike.
+The configuration parameters altheader, rolltype, rollover, buffer, notify, and rename_template are applied to all metric sets alike.
 A subset of these can be overriden by the action=custom values.
 .TP
 .BR config
-name=<plugin_name> action=init path=<path> [ altheader=<0/!0> buffer=<0/!0> rolltype=<rolltype> rollover=<rollover> userdata=<0/!0>] [notify=<path> [notify_isfifo=<bool>]]
+name=<plugin_name> action=init path=<path> [ altheader=<0/!0> buffer=<0/!0> rolltype=<rolltype> rollover=<rollover> userdata=<0/!0>] [notify=<path> [notify_isfifo=<bool>]] [rename_template=<metapath> [rename_uid=<int-uid> [rename_gid=<int-gid] rename_perm=<octal-mode>]]
 .br
 ldmsd_controller configuration line
 .RS
@@ -91,6 +91,24 @@ The path for the file event notices. If unspecified, no notices are sent. See NO
 notify_isfifo=<bool>
 .br
 Default false. If set true, notice_path will be handled in a nonblocking manner as a FIFO.
+.TP
+rename_template=<metapath>
+.br
+This option provides relocating closed CSV files, typically to a subdirectory, for processing by other tools that watch directories. The metapath template is applied to define a rename after file closure. The rename is limited to location on the same mount point, per the C rename(2) call. The following substitutions in the template are performed: %P by plugin name, %C by container name, %S by schema name, %T by file event notification type, %B by basename(closed-file-name), %D by dirname(closed-file-name), %s by timestamp suffix, if it exists. Errors in template specification will cause the rename to be skipped. As part of the rename process, the mode and ownership of the file may also be adjusted by specifying rename_perm, rename_uid, and rename_gid. Missing intermediate directories will be created if possible. To enable greater flexibility than renaming, the notify option must be used instead of the rename_template option.
+.TP
+rename_perm=<modebits>
+.br
+Only octal (e.g.0744) specifications are allowed. If unspecified or 0 is given, then no change is made. The permissions are changed before the rename and even if the rename fails.
+.TP
+rename_uid=<numeric-uid>
+.br
+Specify a new (non-zero) user id for the file. If unspecified or 0 is given, no change in ownership is made.
+Changes in ownership of the files do not affect intermediate directories that might be created following the template.
+.TP
+rename_gid=<numeric-gid>
+.br
+Specify a new (non-zero) group id for the file. If unspecified or 0 is given, no change in group is made. If rename_uid is not given, rename_gid is ignored.
+
 .RE
 
 
@@ -100,7 +118,7 @@ unless overriden by the action=custom values. Only a subset can be overridden.
 
 .TP
 .BR config
-name=<plugin_name> action=custom container=<container> schema=<schema> [ altheader=<0/!0> userdata=<0/!0>] [notify=<path> [notify_isfifo=<bool>]]
+name=<plugin_name> action=custom container=<container> schema=<schema> [ altheader=<0/!0> userdata=<0/!0>] [notify=<path> [notify_isfifo=<bool>]] [rename_template=<metapath> [rename_uid=<int-uid> [rename_gid=<int-gid] rename_perm=<octal-mode>]]
 
 .br
 ldmsd_controller configuration line
@@ -137,6 +155,22 @@ The path for the file event notices. If unspecified, no notices are sent. See NO
 notify_isfifo=<bool>
 .br
 Default false. If set true, notice_path will be handled in a nonblocking manner as a FIFO.
+.TP
+rename_template=<metapath>
+.br
+Overrides the default value set in action = init. Definition is as above.
+.TP
+rename_perm=<modebits>
+.br
+Overrides the default value set in action = init. Definition is as above.
+.TP
+rename_uid=<numeric-uid>
+.br
+Overrides the default value set in action = init. Definition is as above.
+.TP
+rename_gid=<numeric-gid>
+.br
+Overrides the default value set in action = init. Definition is as above.
 .RE
 
 .SH STRGP_ADD ATTRIBUTE SYNTAX
@@ -196,7 +230,7 @@ Note that the sampler's number and order of metric additions may vary with the k
 
 .SH NOTICES OF STORE FILE EVENTS
 .PP
-When the notify option is specified one-line notices of file events (open, close) are written to the named output. Post-processing tools can watch the notification file.  When combined with a roll-over configuration, this provides notices of files rolled over.
+When the notify option is specified one-line notices of file events (open, close) are written to the named output. Post-processing tools can watch the notification file.  When combined with a roll-over configuration, this provides notices of files rolled over. The notify option should not be combined with the rename_template option, as the rename happens after notification.
 .PP
 If the named output is a plain file, it will be written to indefinitely. Typical use is to tail the file into a file-handling script and to periodically rotate  or truncate it as a log file. The file is buffered, so notices may be received some time after the event recorded.
 .PP
@@ -250,6 +284,9 @@ The 'sequence' option has been removed.
 
 .SH BUGS
 There is a maximum of 20 concurrent CSV stores.
+
+.SH IMPERFECT FEATURES
+The rename options do not accept symbolic mode changes or uid or gid.
 
 .SH EXAMPLES
 .PP
