--- a/util/sample_init_scripts/genders/man/ldms-attributes.man
+++ b/util/sample_init_scripts/genders/man/ldms-attributes.man
@@ -37,6 +37,8 @@ ldmsd_idbase=IDMIN      Defines the least component_id for a node type.
                         integer ISUFFIX, component_id is IDMIN+ISUFFIX.
                         component_id of 0 is reserved;
                         ensure IDMIN+ISUFFIX>0.
+                        Overrideable with the LDMSD_IDBASE environment variable,
+                        which is not recommended except for debugging.
 ldmsd_dbg=LEVEL         Defines the daemon binary's logging level, with
                         values as defined in ldmsd(8) and NONE,
                         which routes all logging to /dev/null.
@@ -148,7 +150,7 @@ If FILE is a partial path name, it will be appended to /etc/sysconfig/ldms.d/ an
 A generated configuration file for a specific plugin can be used by defining attribute
 .B ldmsd_config_gen_SUFFIX=PROG.
 The program PROG will be invoked with arguments and should write the entire configuration and start command set needed to its standard output. If PROG is 'yes', then /etc/sysconfig/ldms.d/gen.SUFFIX is expected to be a program.
-If PROG is a partial path name, it will be appended to /etc/sysconfig/ldms.d/ and used as a program. This is the recommended route if multiple instances of the same sampler plugin will be in use. For samplers, the generator program will receive arguments: $plugin-name $producer-name $host $sample_interval $sample_offset
+If PROG is a partial path name, it will be appended to /etc/sysconfig/ldms.d/ and used as a program. This is the recommended route if multiple instances of the same sampler plugin will be in use. For samplers, the generator program will receive arguments: $plugin-name $producer-name $host $sample_interval $sample_offset. For stores, the generator program will receive arguments: $plugin-name $host [$schemas]*, where there will be 0 or more schema names separated by white space each as a separate argument.
 
 .PP
 The normal libgenders attribute-value syntax is:
