--- a/ldms/man/Plugin_store_csv.man
+++ b/ldms/man/Plugin_store_csv.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_store_csv
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "27 Mar 2017" "v3.4" "LDMS Plugin store_csv man page"
+.TH man 7 "22 Oct 2017" "v3.5" "LDMS Plugin store_csv man page"
 
 .SH NAME
 Plugin_store_csv - man page for the LDMS store_csv plugin
@@ -24,11 +24,11 @@ the ldmsd_controller or a configuration file. The store_csv plugin is a CSV stor
 .PP
 
 .SH STORE_CSV INIT CONFIGURATION ATTRIBUTE SYNTAX
-The configuration parameters altheader, rolltype, rollover, buffer, notify, and rename_template are applied to all metric sets alike.
+The configuration parameters altheader, rolltype, rollover, buffer, buffertype, notify, and rename_template are applied to all metric sets alike.
 A subset of these can be overriden by the action=custom values.
 .TP
 .BR config
-name=<plugin_name> action=init path=<path> [ altheader=<0/!0> buffer=<0/!0> rolltype=<rolltype> rollover=<rollover> userdata=<0/!0>] [notify=<path> [notify_isfifo=<bool>]] [rename_template=<metapath> [rename_uid=<int-uid> [rename_gid=<int-gid] rename_perm=<octal-mode>]]
+name=<plugin_name> action=init path=<path> [ altheader=<0/!0> buffer=<0/1/N> buffertype=<3/4> rolltype=<rolltype> rollover=<rollover> userdata=<0/!0>] [notify=<path> [notify_isfifo=<bool>]] [rename_template=<metapath> [rename_uid=<int-uid> [rename_gid=<int-gid] rename_perm=<octal-mode>]]
 .br
 ldmsd_controller configuration line
 .RS
@@ -55,9 +55,13 @@ userdata=<0/!0>
 .br
 Distinguishes whether or not to write each metrics' user data along with each data value. 0 = no write. Any non-zero means to write the values. Default is to not write.
 .TP
-buffer=<0/!0>
+buffer=<0/1/N>
 .br
-Distinguishes whether or not to buffer the data for the writeout. 0 = does not buffer. Any non-zero means buffering occurs. Default is to buffer.
+Distinguishes whether or not to buffer the data for the writeout. 0 = does not buffer. 1 enables buffering with the system determining the flush. N will flush after approximately N kB of data (> 4) or N lines -- buffertype determines which of these it is. Default is system controlled buffering (1).
+.TP
+buffertype=<3/4>
+.br
+If buffer=N then buffertype determines if the buffer parameter refers to kB of writeout or number of lines. The values are the same as in rolltype, so only 3 and 4 are applicable.
 .TP
 rolltype=<rolltype>
 .br
